# image-stitching

./: CMakeLists.txt  README.md
images/panorama/: warp10.tga  warp11.tga
src/: FeatureDetector_498.cpp  FeatureDetector_498.h  main.cpp
src/FeatureMatching/: FeatureDetector_498.h
src/FeatureMatching/SIFT/: SIFTDescriptor.cpp
src/ImageStitching/: Stitching.cpp  Stitching.h
src/SIFT/: SIFTDescriptor.cpp  SIFTDescriptor.h
src/Tools/: Match.cpp  Match.h
